# overbot

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bot.py  config.example.py  docker-compose.yml  launcher.py  overbot.service  overcord.service  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  schema.sql  setup.cfg
.chglog/: config.yml
.github/: FUNDING.yml
.github/workflows/: lint.yml  style.yml
assets/: latest_news_id.txt  questions.json
classes/: command_tree.py  context.py  converters.py  exceptions.py  fetching.py  help.py  nickname.py  paginator.py  player.py  profile.py  request.py  ui.py
cogs/: api.py  commands.py  errors.py  events.py  fun.py  help.py  links.py  locale.py  log.py  member.py  meta.py  miscellaneous.py  overwatch.py  owner.py  patreon.py  patrons.py  post.py  profile.py  random.py  server.py  stats.py  tasks.py  trivia.py
locales/: POTFILES.in  main.pot  stats.json  stats.txt  update.sh  update_stats.py
locales/de_DE/LC_MESSAGES/: main.po
locales/en_US/LC_MESSAGES/: main.po
locales/fr_FR/LC_MESSAGES/: main.po
locales/it_IT/LC_MESSAGES/: main.mo  main.po
locales/ja_JP/LC_MESSAGES/: main.po
locales/ko_KR/LC_MESSAGES/: main.po
locales/ru_RU/LC_MESSAGES/: main.po
migrations/: V1_Migration.sql  V2_Migration.sql  V3_Migration.sql
scripts/: backup.sh  cleanup.sh  dump.sh  format.sh  init.sh  install.sh
utils/: .player.py.swp  cache.py  checks.py  data.py  embed.py  emojis.py  error_handler.py  errors.py  funcs.py  globals.py  helpers.py  i18n.py  paginator.py  player.py  profile.py  request.py  scrape.py  time.py
