[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line_length = 100

[tool.poetry]
name = "overbot"
version = "6.0.3"
description = "The best Overwatch bot for Discord"
authors = ["Davide Tacchini"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvloop = { version = "*", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
discord-py = { git = "https://github.com/Rapptz/discord.py.git" }
psutil = "^5.9.5"
asyncpg = "^0.28.0"
distro = "^1.8.0"
bs4 = "^0.0.1"
pygit2 = "^1.13.1"
speedtest-cli = "^2.1.3"
python-dateutil = "^2.8.2"
lru-dict = "^1.2.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pyright = "^1.1.329"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
