[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line_length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
strictParameterNoneValue = false
reportUnnecessaryTypeIgnoreComment = "warning"
include = ["classes", "cogs", "utils", "bot.py"]
exclude = ["**/__pycache__", "env", ".git"]

[tool.poetry]
name = "overbot"
version = "6.1.3"
description = "The best Overwatch bot for Discord"
authors = ["Davide Tacchini"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvloop = { version = "*", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
discord-py = { git = "https://github.com/Rapptz/discord.py.git" }
psutil = "*"
asyncpg = "*"
distro = "*"
bs4 = "*"
pygit2 = "*"
speedtest-cli = "*"
python-dateutil = "*"
lru-dict = "*"
lxml = "*"
click = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
pyright = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
